<resources>
    <string name="app_name">Deshumidificateur</string>
    <string name="btn_power">Power button(on/off)</string>
    <string name="switch_power_textOff">Off</string>
    <string name="switch_power_textOn">On</string>
    <string name="pwd">Password</string>
    <string name="edit_txt_login">Login</string>
    <string name="sec_acti">sec acti</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_searchCity">Search</string>
    <string name="plnTxt_city">City</string>
    <string name="edtTxt_city">Error city name</string>
    <string name="edtTxt_temperature">Error temperature</string>
    <string name="ic_sun">Error image</string>
    <string name="ic_weather">ic_weather</string>
    <string name="humidity_error">Humidity : error</string>
</resources>