<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_sun"
            android:layout_width="106dp"
            android:layout_height="96dp"
            android:contentDescription="@string/ic_sun"
            app:srcCompat="@mipmap/ic_sun" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtVw_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edtTxt_temperature"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtVw_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edtTxt_city"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtVw_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:text='@string/humidity_error' />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393">

        <Switch
            android:id="@+id/switch_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:layoutDirection="ltr"
            android:scaleX="@dimen/scaleX"
            android:scaleY="@dimen/scaleY"
            android:showText="true"
            android:textOff="@string/switch_power_textOff"
            android:textOn="@string/switch_power_textOn"
            android:textStyle="bold"
            android:thumb="@mipmap/ic_launcher"
            android:track="@drawable/custom_switch_power"
            tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

        <SeekBar
            android:id="@+id/seekBar_fan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:maxHeight="@dimen/size_seekBar_height"
            android:paddingStart="40dip"
            android:progress="0"
            android:progressDrawable="@drawable/custom_seekbar_fan"
            android:thumb="@mipmap/ic_launcher"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_disconnect" />

        <ImageButton
            android:id="@+id/imgBtn_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/ic_weather"
            app:srcCompat="@mipmap/ic_weather" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>